# getcrmkit.com

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  Procfile.dev  README.md  README.zh-CN.md  README.zh-TW.md
api/: .env.example  CLAUDE.md  Makefile  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/app/: main.py  worker.py
api/app/config/: logging.py  settings.py
api/app/domain/auth/: entities.py  (+4 more)
api/scripts/: seed_script_templates.py
api/tests/: conftest.py
api/tests/application/: test_360_query_service.py  test_export_service.py  test_import_service.py
api/tests/e2e/: conftest.py  test_360_api.py  test_auth.py  test_customer_filter_api.py  test_customers.py  test_customization_options.py  test_duplicate_api.py  test_export_api.py  test_follow_up_report.py  test_follow_ups.py  test_health.py  test_import_api.py  test_pricing_tiers.py  test_product_categories.py  test_product_variants.py  test_products.py  test_queue.py  test_saved_view_api.py  test_script_templates.py
api/tests/factories/: user_factory.py
api/tests/integration/: test_customer_repo_duplicate.py  test_customer_repo_filter.py  test_customer_repositories.py  test_customization_option_repository.py  test_data_job_repository.py  test_database.py  test_follow_up_repository.py  test_pricing_tier_repository.py  test_product_category_repository.py  test_product_repository.py  test_product_variant_repository.py  test_queue.py  test_redis.py  test_saved_view_repository.py  test_token_blacklist.py
api/tests/unit/: test_queue.py
(+391 files in other folders)
